2007-01-28  David Moore  <dcm@acm.org>

	* Added python wrapper, courtesy of Ian Wienand.
	* Fixed compile warnings in python wrapper.

2007-01-27  David Moore  <dcm@acm.org>

	* iptc/Makefile.am, INSTALL: Compile fix for when gettext is in libintl
	instead of libc, as is often the case for Mac OS (reported by Mark
	Hunte).

2006-10-24  David Moore  <dcm@acm.org>

	* libiptcdata.ebuild: Added Gentoo ebuild file, courtesy of Dirk Göttel.

2006-05-23  David Moore  <dcm@acm.org>

	* iptc-data.c: Changed fopen() to use "rb" instead of "r" for windows
	compatability.  Noticed by Ralph Heidelberg.

2006-04-12  David Moore  <dcm@acm.org>

	* libiptcdata.spec.in: Fixed spec file to remove errors under Fedora
	Core 5.

2005-10-04  David Moore  <dcm@acm.org>

	* iptc-tag.c: Changed "Category" dataset from repeatable to
	not-repeatable (Patch from Grigory Entin).

2005-09-29  David Moore  <dcm@acm.org>

	* NEWS, configure.in: updated for version 0.2.1.
	* docs/reference: added new section for the command-line utility
	* docs/reference: updated the synopsis for the command-line utility
	and added a description of its return values.
	* iptc/main.c: added the special dataset number "all" which means
	all datasets of the given tag should be operated on.
	* iptc/main.c: changed the return value of the program to be
	success whenever at least one command succeeds, and failure if
	no command succeeds.

2005-09-17  David Moore  <dcm@acm.org>

	* iptc/main.c: modified command syntax to allow specification of
	dataset number (for duplicates) along with the tag name.

2005-09-16  David Moore  <dcm@acm.org>

	* iptc/main.c: print dataset numbers of duplicate tags

2005-09-15  David Moore  <dcm@acm.org>

	* docs/reference: Documentation updates

2005-09-14  David Moore  <dcm@acm.org>

	* configure.in, iptc/main.c: Mac OS X compile fixes for libiconv

2005-09-10  David Moore  <dcm@acm.org>

	* iptc-data.[ch]: added new functions iptc_data_set_version(),